--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ mpmath==1.3.0
 narwhals==1.45.0
 networkx==3.5
 numpy==2.3.1
-opencv-python-headless==4.8.1.78
+opencv-python-headless
 packaging==25.0
 pandas==2.3.0
 pillow==11.3.0
